force-app/main/default/objects/Business_Rule_Field_Mapping__mdt/Business_Rule_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>A custom metadata record set that stores the mapping between Business Rule records and the objects over which various rules are governed.  The fields provided are primarily relational</description>
    <label>Business Rule Field Mapping</label>
    <pluralLabel>Business Rule Field Mappings</pluralLabel>
</CustomObject>