force-app/main/default/objects/Business_Rule_Field_Mapping__mdt/fields/Business_Rule__c.field-meta.xml
<CustomField>
    <fullName>Business_Rule__c</fullName>
    <description>The field name of the Business Rule that compared against other records</description>
    <label>Business Rule</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>