force-app/main/default/objects/Business_Rule_Field_Mapping__mdt/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>