force-app/main/default/objects/Business_Rule_Field_Mapping__mdt/fields/Priority_Value__c.field-meta.xml
<CustomField>
    <fullName>Priority_Value__c</fullName>
    <description>The priority value (used for sorting of the listview only)</description>
    <label>Priority Value</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>