force-app/main/default/objects/Business_Rule_Field_Mapping__mdt/listViews/Mapping_Overview.listView-meta.xml
<ListView>
    <fullName>Mapping_Overview</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Priority_Value__c</columns>
    <columns>Business_Rule__c</columns>
    <columns>Case__c</columns>
    <columns>Quote__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mapping Overview</label>
</ListView>